Se actualiza toda la página con mejoras y avances recientes

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,9 @@
 // Colors
 
-$primary: #5C62C5;
+$primary: #5c62c5;
 $dark-grey: #363636;
-$light-grey: #D8D8D8;
+$light-grey: #d8d8d8;
+$progressExxon: 100%;
+$progressDev: 49.86%;
+$progressCivil: 71.74%;
+$progressEssen: 100%;
