--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -41,12 +41,12 @@ h4 {
 .tituloProyecto {
   background: linear-gradient(90deg, #388697, #5948d5);
   color: white;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   z-index: 10;
   text-align: center;
   font-weight: bold;
   padding: 10px 5px;
-  max-width: 15em;
+  max-width: 100%;
   border-radius: 10px;
   margin: auto !important;
   transform: translateY(-400%);
@@ -58,7 +58,7 @@ h4 {
   color: white;
   font-weight: bold;
   z-index: 10;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   border-radius: 15px;
   padding: 10px 20px;
   margin: auto !important;
